@@ -100,9 +100,16 @@ namespace kt
 		if (!index.isValid() || index.row() < 0 || index.row() >= rowCount(QModelIndex()))
 			return QVariant();
 		
-		if (role != Qt::DisplayRole)
-			return QVariant();
+		if (role == Qt::DisplayRole)
+			return displayData(index);
+		else if (role == Qt::UserRole)
+			return sortData(index);
 		
+		return QVariant();
+	}
+
+	QVariant IWFileListModel::displayData(const QModelIndex & index) const
+	{
 		if (tc->getStats().multi_file_torrent)
 		{
 			const bt::TorrentFileInterface* file = &tc->getTorrentFile(index.row());
@@ -150,10 +157,52 @@ namespace kt
 				default: return QVariant();
 			}
 		}
-		
 		return QVariant();
 	}
-
+	
+	QVariant IWFileListModel::sortData(const QModelIndex & index) const
+	{
+		if (tc->getStats().multi_file_torrent)
+		{
+			const bt::TorrentFileInterface* file = &tc->getTorrentFile(index.row());
+			switch (index.column())
+			{
+				case 2: return (int)file->getPriority();
+				case 3: 
+					if (file->isMultimedia())
+					{
+						if (tc->readyForPreview(file->getFirstChunk(), file->getFirstChunk()+1) )
+							return 3;
+						else
+							return 2;
+					}
+					else
+						return 1;
+				case 4: 
+					return file->getDownloadPercentage();
+			}
+		}
+		else
+		{
+			switch (index.column())
+			{
+				case 2: return QVariant();
+				case 3: 
+					if (mmfile)
+					{
+						if (tc->readyForPreview(0,1))
+							return 3;
+						else
+							return 2;
+					}
+					else
+						return 1;
+				case 4: 
+					return bt::Percentage(tc->getStats());
+			}
+		}
+		return QVariant();
+	}
 	
 	
 	bool IWFileListModel::setData(const QModelIndex & index, const QVariant & value, int role)
