@@ -5,6 +5,7 @@ Changes in 3.0.2 :
 - When recreating files, make sure directory they are in, exists
 - Fix remove from group not working (160499)
 - Fix crash in torrent creator when there are no trackers
+- Fix sorting in files tab
 
 Changes in 3.0.1 :
 - Fix sessionTTL not being able to be bigger then 99
